[workspace]
resolver = "3"
members = ["carbon-decoders/*"]
exclude = ["dist", "tools"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/staratlasmeta/star-atlas-decoders"

[workspace.dependencies]
carbon-core = { version = "0.12.0", features = ["macros"], default-features = false }
solana-account = "3.0.0"
solana-instruction = { version = "~3.0.0", default-features = false }
solana-pubkey = { version = "3.0.0", features = ["borsh", "serde"] }
serde = { version = "1.0", features = ["derive"] }
