[package]
name = "carbon-points-store-decoder"
version = "0.10.0"
edition = "2024"
description = "Rust decoder for Star Atlas Points Store program on Solana"
license = "Apache-2.0"
repository = "https://github.com/staratlasmeta/star-atlas-decoders"
homepage = "https://github.com/staratlasmeta/star-atlas-decoders"
readme = "README.md"
keywords = ["solana", "star-atlas", "decoder"]
categories = ["encoding"]
rust-version = "1.85"

[lib]
crate-type = ["rlib"]

[dependencies]
carbon-core = "0.10.0"
carbon-proc-macros = "0.10.0"
carbon-macros = "0.10.0"
solana-account = "2.2.1"
solana-instruction = { version = "2.3.0", default-features = false }
solana-pubkey = { version = "2.4.0", features = ["borsh", "serde", "bytemuck"] }
serde = { version = "1.0", features = ["derive"] }

