[package]
name = "profile-vault-decoder"
version = "0.8.1"
edition = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
carbon-core = { workspace = true }
carbon-proc-macros = { workspace = true }
carbon-macros = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
serde = { workspace = true }

