[package]
name = "profile-vault-decoder"
version = "0.10.0"
edition = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
carbon-core = "0.10.0"
carbon-proc-macros = "0.10.0"
carbon-macros = "0.10.0"
solana-account = "2.2.1"
solana-instruction = { version = "2.3.0", default-features = false }
solana-pubkey = { version = "2.4.0", features = ["borsh", "serde", "bytemuck"] }
serde = { version = "1.0", features = ["derive"] }

