[package]
name = "carbon-tcomp-decoder"
version = "0.1.0"
edition = "2024"
description = "Rust decoder for Tensor cNFT Compressed program on Solana"
license = "Apache-2.0"
repository = "https://github.com/staratlasmeta/star-atlas-decoders"
homepage = "https://github.com/staratlasmeta/star-atlas-decoders"
readme = "README.md"
keywords = ["solana", "star-atlas", "decoder"]
categories = ["encoding"]
rust-version = "1.85"


[lib]
crate-type = ["rlib"]

[features]
default = []

serde = ["dep:serde", "dep:serde-big-array"]

postgres = [
    "carbon-core/postgres",
    "dep:sqlx",
    "dep:async-trait",
    "dep:sqlx_migrator",
    "serde",
]

graphql = [
    "carbon-core/graphql",
    "dep:juniper",
    "dep:base64",
    "serde",
]

[dependencies]
carbon-core = { version = "0.12.0", features = ["macros"], default-features = false }
borsh = { version = "1.5.1", features = ["derive"] }
solana-pubkey = { version = "3.0.0", features = ["borsh", "serde"] }
solana-account = "3.0.0"
solana-instruction = { version = "~3.0.0", default-features = false }
serde_json = "1.0.145"

serde = { version = "1.0.228", features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }

sqlx = { version = "0.8.6", features = ["postgres", "rust_decimal"], optional = true }
async-trait = { version = "0.1.89", optional = true }
sqlx_migrator = { version = "0.17.0", optional = true }

juniper = { version = "0.16.2", optional = true }
base64 = { version = "0.22.1", optional = true }


[dev-dependencies]
carbon-test-utils = "0.12.0"
